Fix card flipping flicker bug in Firefox. Remove unneeded image from markup.

--- a/drupal/sites/all/themes/blt/css/angular-portfolio-app/portfolio.css
+++ b/drupal/sites/all/themes/blt/css/angular-portfolio-app/portfolio.css
@@ -128,10 +128,9 @@ p {
   backface-visibility: hidden;
 }
 .face.back {
-  display: block;
   -moz-transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
-  transform: rotateY(180deg);
+  transform: rotateY(180deg) translatez(1px);
   box-sizing: border-box;
   color: #666;
 }
